module_8/golear_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: go-lear-pro-api
  name: go-lear-pro-api
  namespace: test-service
spec:
  clusterIP: 10.237.131.67
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: go-lear-pro-api
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
